# untitiled_cosmos

./: Cargo.toml
cosmos/: Cargo.toml
cosmos/assets/config/: global_config.json  star_properties.json  substance_properties.json  units_info.json
cosmos/src/: main.rs
docs/: SETTINGS.md
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/assets/: mod.rs  settings.rs
lib/src/consts/: greek_alphabets.rs  mod.rs  path.rs
lib/src/core/: mod.rs  systems.rs
lib/src/debug/: celestial.rs  mod.rs
lib/src/input/: camera.rs  mod.rs
lib/src/math/: aabbs.rs  mod.rs  physics.rs
lib/src/nn/: inferencing.rs  mod.rs  training.rs
lib/src/sci/: chemistry.rs  physics.rs
lib/src/sim/: bundles.rs  components.rs  mod.rs  resources.rs  systems.rs
lib/src/utils/: mod.rs
tmp/: cvt.py  elem_cvt_json.py
