[package]
name = "untitled_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.12.1", default-features = false, features = [
    "dynamic_linking",
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "bevy_gizmos",
    "default_font",
    "serialize",
] }
bevy_xpbd_2d = { version = "0.3.3", default-features = false, features = [
    "2d",
    "debug-plugin",
    "parallel",
    "f64",
] }
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.8.1"
serde = "1.0.196"
serde_derive = "1.0.196"
serde_json = "1.0.113"
bevy-inspector-egui = { version = "0.22.1", optional = true }

[features]
debug = ["dep:bevy-inspector-egui", "bevy/trace_tracy"]
